--- a/u1_knn.ipynb
+++ b/u1_knn.ipynb
@@ -2,19 +2,559 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "84da8200",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.nighbors import KNeighborsClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "\n",
-    "print(\"klar\")"
+    "print(\"Loading dataset...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "db57d648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from på data: (4873, 11) features , 4873 rader\n",
+      "klasser i quality:\n",
+      "quality\n",
+      "4     163\n",
+      "5    1457\n",
+      "6    2198\n",
+      "7     880\n",
+      "8     175\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Läs in data white wine från csv-fil\n",
+    "# sep=\";\" eftersom filen använder semikolon som separator\n",
+    "df = pd.read_csv(\"wine.csv\", sep=\";\")\n",
+    "\n",
+    "# behåll endast rader med quality \n",
+    "tillåtna_klasser = [4, 5, 6, 7, 8 ]\n",
+    "df = df[df[\"quality\"].isin(tillåtna_klasser)].copy()\n",
+    "\n",
+    "#gör om quality till sträng\n",
+    "df[\"quality\"] = df[\"quality\"].astype(str)\n",
+    "\n",
+    "# x = features, y = target\n",
+    "X = df.drop(\"quality\", axis=1)\n",
+    "Y = df[\"quality\"]\n",
+    "\n",
+    "print(\"from på data:\", X.shape, \"features\", \",\", Y.shape[0], \"rader\")\n",
+    "print (\"klasser i quality:\")\n",
+    "print(y.value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d0a4c737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kör_knn(k, normalisera, train_andel, slump=42):\n",
+    "    \"\"\"\n",
+    "    k = antal grannar\n",
+    "    normalisera = True/False\n",
+    "    train_andel = andel träning (0.9 = 90%)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # data\n",
+    "    if normalisera:\n",
+    "        scaler = MinMaxScaler()\n",
+    "        X_data = scaler.fit_transform(X)\n",
+    "        norm_text = \"Normaliserat\"\n",
+    "    else:\n",
+    "        X_data = X.values\n",
+    "        norm_text = \"Originaldata\"\n",
+    "\n",
+    "    test_andel = 1 - train_andel\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_data,\n",
+    "        Y,\n",
+    "        train_size=train_andel,\n",
+    "        test_size=test_andel,\n",
+    "        stratify=Y,\n",
+    "        random_state=slump\n",
+    "    )\n",
+    "\n",
+    "    modell = KNeighborsClassifier(n_neighbors=k)\n",
+    "    modell.fit(X_train, y_train)\n",
+    "\n",
+    "    y_pred = modell.predict(X_test)\n",
+    "\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    print(\"-\" * 60)\n",
+    "    print(f\"k = {k}\")\n",
+    "    print(f\"Normalisering: {norm_text}\")\n",
+    "    print(f\"Train/Test: {train_andel:.2f} / {test_andel:.2f}\")\n",
+    "    print(\"Confusion matrix\")\n",
+    "    print(cm)\n",
+    "    print(\"Accuracy:\", acc)\n",
+    "\n",
+    "    return {\n",
+    "        \"k\": k,\n",
+    "        \"Normalisering\": norm_text,\n",
+    "        \"Train_andel\": train_andel,\n",
+    "        \"Test_andel\": test_andel,\n",
+    "        \"Accuracy\": acc\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b7f13c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  4   9   3   0   0]\n",
+      " [  5  80  50  10   1]\n",
+      " [  5  65 124  24   2]\n",
+      " [  2  19  36  30   1]\n",
+      " [  0   2   7   6   3]]\n",
+      "Accuracy: 0.49385245901639346\n",
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[  9  23  21   1   0]\n",
+      " [ 23 239 186  35   3]\n",
+      " [ 23 220 402  82   6]\n",
+      " [  9  61 127  92   5]\n",
+      " [  1  12  21  15   9]]\n",
+      "Accuracy: 0.46215384615384614\n",
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[ 18  36  25   2   0]\n",
+      " [ 46 346 287  47   3]\n",
+      " [ 51 309 603 130   6]\n",
+      " [ 17 102 188 126   7]\n",
+      " [  1  19  39  18  11]]\n",
+      "Accuracy: 0.4530160032827247\n",
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  3   7   4   2   0]\n",
+      " [  7  88  46   5   0]\n",
+      " [  5  55 133  18   9]\n",
+      " [  0  10  29  47   2]\n",
+      " [  0   1   8   3   6]]\n",
+      "Accuracy: 0.5676229508196722\n",
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[ 15  19  17   2   1]\n",
+      " [ 13 284 170  18   1]\n",
+      " [ 16 179 437  88  13]\n",
+      " [  4  34 110 136  10]\n",
+      " [  0   2  25  15  16]]\n",
+      "Accuracy: 0.5464615384615384\n",
+      "------------------------------------------------------------\n",
+      "k = 3\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[ 20  33  27   1   0]\n",
+      " [ 23 433 243  26   4]\n",
+      " [ 20 292 644 131  12]\n",
+      " [  9  42 187 190  12]\n",
+      " [  0   9  33  30  16]]\n",
+      "Accuracy: 0.5346737792367665\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  1  10   5   0   0]\n",
+      " [  6  70  60   9   1]\n",
+      " [  3  67 119  28   3]\n",
+      " [  0  22  37  28   1]\n",
+      " [  0   3   5   8   2]]\n",
+      "Accuracy: 0.45081967213114754\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[  4  29  16   5   0]\n",
+      " [ 10 240 204  28   4]\n",
+      " [ 10 207 425  86   5]\n",
+      " [  3  45 153  88   5]\n",
+      " [  0   8  31  10   9]]\n",
+      "Accuracy: 0.4713846153846154\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[  7  49  19   6   0]\n",
+      " [ 18 356 300  49   6]\n",
+      " [ 15 319 640 121   4]\n",
+      " [  1  76 235 121   7]\n",
+      " [  0  17  45  20   6]]\n",
+      "Accuracy: 0.46368485843249896\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  5   6   4   1   0]\n",
+      " [  3  85  54   4   0]\n",
+      " [  3  51 139  20   7]\n",
+      " [  0   7  37  43   1]\n",
+      " [  0   1   7   8   2]]\n",
+      "Accuracy: 0.5614754098360656\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[ 10  27  13   3   1]\n",
+      " [  7 288 172  19   0]\n",
+      " [  3 173 454  96   7]\n",
+      " [  1  24 128 136   5]\n",
+      " [  0   3  27  19   9]]\n",
+      "Accuracy: 0.552\n",
+      "------------------------------------------------------------\n",
+      "k = 5\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[  9  39  29   4   0]\n",
+      " [  7 423 267  28   4]\n",
+      " [  6 273 680 134   6]\n",
+      " [  1  24 212 191  12]\n",
+      " [  0   6  41  33   8]]\n",
+      "Accuracy: 0.5379565038982356\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  1  10   5   0   0]\n",
+      " [  4  71  63   7   1]\n",
+      " [  5  71 126  18   0]\n",
+      " [  0  20  43  24   1]\n",
+      " [  0   4   8   4   2]]\n",
+      "Accuracy: 0.45901639344262296\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[  5  27  19   3   0]\n",
+      " [  6 233 213  30   4]\n",
+      " [ 10 193 449  79   2]\n",
+      " [  1  41 168  79   5]\n",
+      " [  0   8  29  11  10]]\n",
+      "Accuracy: 0.4775384615384615\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Originaldata\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[  7  46  24   4   0]\n",
+      " [ 15 344 326  43   1]\n",
+      " [  8 268 697 120   6]\n",
+      " [  0  83 248 107   2]\n",
+      " [  0  15  49  16   8]]\n",
+      "Accuracy: 0.47722609766105867\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.90 / 0.10\n",
+      "Confusion matrix\n",
+      "[[  1  11   3   1   0]\n",
+      " [  1  90  49   6   0]\n",
+      " [  2  49 143  26   0]\n",
+      " [  0   5  38  43   2]\n",
+      " [  0   1   8   8   1]]\n",
+      "Accuracy: 0.569672131147541\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.67 / 0.33\n",
+      "Confusion matrix\n",
+      "[[  7  26  16   5   0]\n",
+      " [  7 277 176  25   1]\n",
+      " [  2 169 465  95   2]\n",
+      " [  0  12 140 138   4]\n",
+      " [  0   4  28  20   6]]\n",
+      "Accuracy: 0.5495384615384615\n",
+      "------------------------------------------------------------\n",
+      "k = 7\n",
+      "Normalisering: Normaliserat\n",
+      "Train/Test: 0.50 / 0.50\n",
+      "Confusion matrix\n",
+      "[[  7  38  32   4   0]\n",
+      " [  3 423 267  35   1]\n",
+      " [  2 257 690 145   5]\n",
+      " [  1  24 228 179   8]\n",
+      " [  0   5  43  38   2]]\n",
+      "Accuracy: 0.5338530980713992\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>Normalisering</th>\n",
+       "      <th>Train_andel</th>\n",
+       "      <th>Test_andel</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.493852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.462154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.453016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.567623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.546462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.534674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.450820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.471385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.463685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.561475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.552000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.537957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.459016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.477538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Originaldata</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.477226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.569672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.549538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Normaliserat</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.533853</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    k Normalisering  Train_andel  Test_andel  Accuracy\n",
+       "0   3  Originaldata     0.900000    0.100000  0.493852\n",
+       "1   3  Originaldata     0.666667    0.333333  0.462154\n",
+       "2   3  Originaldata     0.500000    0.500000  0.453016\n",
+       "3   3  Normaliserat     0.900000    0.100000  0.567623\n",
+       "4   3  Normaliserat     0.666667    0.333333  0.546462\n",
+       "5   3  Normaliserat     0.500000    0.500000  0.534674\n",
+       "6   5  Originaldata     0.900000    0.100000  0.450820\n",
+       "7   5  Originaldata     0.666667    0.333333  0.471385\n",
+       "8   5  Originaldata     0.500000    0.500000  0.463685\n",
+       "9   5  Normaliserat     0.900000    0.100000  0.561475\n",
+       "10  5  Normaliserat     0.666667    0.333333  0.552000\n",
+       "11  5  Normaliserat     0.500000    0.500000  0.537957\n",
+       "12  7  Originaldata     0.900000    0.100000  0.459016\n",
+       "13  7  Originaldata     0.666667    0.333333  0.477538\n",
+       "14  7  Originaldata     0.500000    0.500000  0.477226\n",
+       "15  7  Normaliserat     0.900000    0.100000  0.569672\n",
+       "16  7  Normaliserat     0.666667    0.333333  0.549538\n",
+       "17  7  Normaliserat     0.500000    0.500000  0.533853"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultat = []\n",
+    "\n",
+    "k_values = [3, 5, 7]\n",
+    "train_splits = [0.90, 2/3, 0.50]\n",
+    "\n",
+    "for k in k_values:\n",
+    "    for normalisera in [False, True]:\n",
+    "        for train_andel in train_splits:\n",
+    "            res = kör_knn(k, normalisera, train_andel)\n",
+    "            resultat.append(res)\n",
+    "\n",
+    "resultat_df = pd.DataFrame(resultat)\n",
+    "resultat_df\n"
    ]
   }
  ],
@@ -25,7 +565,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
