--- a/u2_knn.ipynb
+++ b/u2_knn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "1955b069",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "36b45933",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "4      9.9        6  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "74a8c865",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "723adc67",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "84245c1c",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "4      9.9  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "2a7b46fd",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "id": "029b7fc5",
    "metadata": {},
    "outputs": [
@@ -487,14 +487,14 @@
      "text": [
       "Utan normalisering\n",
       "Confusion matrix\n",
-      "[[  0   0   2   1   3   0   0]\n",
-      " [  0   8  10  18   1   0   0]\n",
-      " [  1  10 178  73  14   0   0]\n",
-      " [  0   7  73 269  66   7   0]\n",
-      " [  1   1  17  52 110   6   0]\n",
-      " [  0   0   3  10  14  24   1]\n",
+      "[[  0   0   0   1   0   1   0]\n",
+      " [  0  13  10   6   3   1   1]\n",
+      " [  0   9 186  82   9   4   0]\n",
+      " [  1  13  88 290  52   7   1]\n",
+      " [  1   4  10  49  98  12   0]\n",
+      " [  0   0   3   8   4  13   0]\n",
       " [  0   0   0   0   0   0   0]]\n",
-      "Accuracy 0.6010204081632653\n"
+      "Accuracy 0.6122448979591837\n"
      ]
     }
    ],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "0bf6b9e1",
    "metadata": {},
    "outputs": [
@@ -519,13 +519,13 @@
      "text": [
       "Med normalisering\n",
       "Confusion matrix\n",
-      "[[  0   0   1   0   1   0]\n",
-      " [  0  11   6   9   3   0]\n",
-      " [  0  10 173  88  18   4]\n",
-      " [  0   4  87 280  61  12]\n",
-      " [  0   1  15  45 110   8]\n",
-      " [  0   0   1   1  13  18]]\n",
-      "Accuracy 0.6040816326530613\n"
+      "[[  0   2   0   2   1   0]\n",
+      " [  2  11  12   8   3   2]\n",
+      " [  1   9 180  93  16   5]\n",
+      " [  0   4  78 283  50  11]\n",
+      " [  0   1  15  52  91  11]\n",
+      " [  0   0   3   9  10  15]]\n",
+      "Accuracy 0.5918367346938775\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "567a3832",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5d7edd96",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "400"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "c53f0391",
    "metadata": {},
    "outputs": [
@@ -653,8 +653,8 @@
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.626531</td>\n",
-       "      <td>[[0, 0, 0, 1, 1, 0, 0], [1, 5, 6, 3, 1, 1, 0],...</td>\n",
+       "      <td>0.616327</td>\n",
+       "      <td>[[0, 1, 0, 3, 0, 0, 0], [0, 8, 5, 1, 0, 0, 0],...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -662,8 +662,8 @@
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.657143</td>\n",
-       "      <td>[[0, 0, 1, 1, 0, 0, 0], [1, 7, 3, 1, 2, 0, 1],...</td>\n",
+       "      <td>0.610204</td>\n",
+       "      <td>[[0, 0, 0, 2, 0, 0], [0, 3, 8, 2, 0, 1], [1, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -671,8 +671,8 @@
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.632653</td>\n",
-       "      <td>[[0, 0, 0, 1, 0, 0, 0], [0, 6, 6, 2, 1, 0, 0],...</td>\n",
+       "      <td>0.565306</td>\n",
+       "      <td>[[0, 1, 1, 1, 0, 0], [0, 5, 1, 3, 3, 0], [0, 6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -680,8 +680,8 @@
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.628571</td>\n",
-       "      <td>[[0, 0, 0, 0, 0, 0, 0], [0, 4, 9, 7, 0, 1, 0],...</td>\n",
+       "      <td>0.640816</td>\n",
+       "      <td>[[0, 0, 0, 1, 0, 0, 0], [0, 3, 4, 3, 0, 1, 0],...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -689,8 +689,8 @@
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.636735</td>\n",
-       "      <td>[[0, 0, 1, 0, 0, 0, 0], [0, 5, 3, 4, 0, 0, 0],...</td>\n",
+       "      <td>0.624490</td>\n",
+       "      <td>[[0, 1, 0, 0, 0, 0, 0], [0, 4, 6, 3, 0, 0, 0],...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -698,21 +698,21 @@
       ],
       "text/plain": [
        "   run  test_size  train_size  normalize  accuracy  \\\n",
-       "0    1        0.1         0.9      False  0.626531   \n",
-       "1    2        0.1         0.9      False  0.657143   \n",
-       "2    3        0.1         0.9      False  0.632653   \n",
-       "3    4        0.1         0.9      False  0.628571   \n",
-       "4    5        0.1         0.9      False  0.636735   \n",
+       "0    1        0.1         0.9      False  0.616327   \n",
+       "1    2        0.1         0.9      False  0.610204   \n",
+       "2    3        0.1         0.9      False  0.565306   \n",
+       "3    4        0.1         0.9      False  0.640816   \n",
+       "4    5        0.1         0.9      False  0.624490   \n",
        "\n",
        "                                    confusion_matrix  \n",
-       "0  [[0, 0, 0, 1, 1, 0, 0], [1, 5, 6, 3, 1, 1, 0],...  \n",
-       "1  [[0, 0, 1, 1, 0, 0, 0], [1, 7, 3, 1, 2, 0, 1],...  \n",
-       "2  [[0, 0, 0, 1, 0, 0, 0], [0, 6, 6, 2, 1, 0, 0],...  \n",
-       "3  [[0, 0, 0, 0, 0, 0, 0], [0, 4, 9, 7, 0, 1, 0],...  \n",
-       "4  [[0, 0, 1, 0, 0, 0, 0], [0, 5, 3, 4, 0, 0, 0],...  "
+       "0  [[0, 1, 0, 3, 0, 0, 0], [0, 8, 5, 1, 0, 0, 0],...  \n",
+       "1  [[0, 0, 0, 2, 0, 0], [0, 3, 8, 2, 0, 1], [1, 1...  \n",
+       "2  [[0, 1, 1, 1, 0, 0], [0, 5, 1, 3, 3, 0], [0, 6...  \n",
+       "3  [[0, 0, 0, 1, 0, 0, 0], [0, 3, 4, 3, 0, 1, 0],...  \n",
+       "4  [[0, 1, 0, 0, 0, 0, 0], [0, 4, 6, 3, 0, 0, 0],...  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "f764fdbd",
    "metadata": {},
    "outputs": [
@@ -760,25 +760,25 @@
        "      <th>0</th>\n",
        "      <td>0.1</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.625000</td>\n",
+       "      <td>0.624755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.1</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.626408</td>\n",
+       "      <td>0.617327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.3</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.587714</td>\n",
+       "      <td>0.587619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.3</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.588490</td>\n",
+       "      <td>0.589252</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -786,13 +786,13 @@
       ],
       "text/plain": [
        "   test_size  normalize  accuracy\n",
-       "0        0.1      False  0.625000\n",
-       "1        0.1       True  0.626408\n",
-       "2        0.3      False  0.587714\n",
-       "3        0.3       True  0.588490"
+       "0        0.1      False  0.624755\n",
+       "1        0.1       True  0.617327\n",
+       "2        0.3      False  0.587619\n",
+       "3        0.3       True  0.589252"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "62ab6f59",
    "metadata": {},
    "outputs": [
@@ -844,41 +844,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>92</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.689796</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>58</td>\n",
+       "      <th>85</th>\n",
+       "      <td>86</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.685714</td>\n",
+       "      <td>0.683673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>69</td>\n",
+       "      <th>39</th>\n",
+       "      <td>40</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.9</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.677551</td>\n",
+       "      <td>0.673469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>95</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.669388</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     run  test_size  train_size  normalize  accuracy\n",
-       "191   92        0.1         0.9       True  0.689796\n",
-       "57    58        0.1         0.9      False  0.685714\n",
-       "68    69        0.1         0.9      False  0.677551"
+       "    run  test_size  train_size  normalize  accuracy\n",
+       "85   86        0.1         0.9      False  0.683673\n",
+       "39   40        0.1         0.9      False  0.673469\n",
+       "94   95        0.1         0.9      False  0.669388"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "d64acbe0",
    "metadata": {},
    "outputs": [
@@ -900,43 +900,43 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Körning nummer 92\n",
-      "test_size 0.1 train_size 0.9\n",
-      "normalize True\n",
-      "accuracy 0.689795918367347\n",
-      "Confusion matrix\n",
-      "[[  0   0   0   2   0   0]\n",
-      " [  0   4   6   3   0   1]\n",
-      " [  2   4 104  32   9   1]\n",
-      " [  0   6  31 167  23   3]\n",
-      " [  0   1   5  15  57   2]\n",
-      " [  0   1   0   3   2   6]]\n",
-      "\n",
-      "Körning nummer 58\n",
+      "Körning nummer 86\n",
       "test_size 0.1 train_size 0.9\n",
       "normalize False\n",
-      "accuracy 0.6857142857142857\n",
+      "accuracy 0.6836734693877551\n",
       "Confusion matrix\n",
-      "[[  0   1   2   1   0   0   0]\n",
-      " [  0   2   4   0   0   0   0]\n",
-      " [  1   3  98  36   4   0   0]\n",
-      " [  0   3  26 164  30   4   0]\n",
-      " [  0   0   5  25  67   4   0]\n",
-      " [  0   0   0   2   2   5   0]\n",
-      " [  0   0   0   0   1   0   0]]\n",
+      "[[  0   1   0   0   0   0]\n",
+      " [  0   6   2   2   0   0]\n",
+      " [  0   3  95  38   4   0]\n",
+      " [  0   5  34 182  15   2]\n",
+      " [  0   0   6  29  44   6]\n",
+      " [  0   0   1   5   2   8]]\n",
       "\n",
-      "Körning nummer 69\n",
+      "Körning nummer 40\n",
       "test_size 0.1 train_size 0.9\n",
       "normalize False\n",
-      "accuracy 0.6775510204081633\n",
+      "accuracy 0.673469387755102\n",
       "Confusion matrix\n",
-      "[[  0   1   0   0   0   0   0]\n",
-      " [  0   9  10   4   1   0   0]\n",
-      " [  0   4  86  31   7   3   0]\n",
-      " [  0   1  23 165  22   5   0]\n",
-      " [  0   0   5  26  63   4   0]\n",
-      " [  0   0   1   7   2   9   0]\n",
-      " [  0   0   0   1   0   0   0]]\n"
+      "[[  0   0   3   0   0   0   0]\n",
+      " [  0   9   5   6   0   0   0]\n",
+      " [  2   1 103  27   8   0   0]\n",
+      " [  0   2  35 152  30   1   0]\n",
+      " [  0   1   6  24  57   5   0]\n",
+      " [  1   0   0   1   1   9   0]\n",
+      " [  0   0   1   0   0   0   0]]\n",
+      "\n",
+      "Körning nummer 95\n",
+      "test_size 0.1 train_size 0.9\n",
+      "normalize False\n",
+      "accuracy 0.6693877551020408\n",
+      "Confusion matrix\n",
+      "[[  0   0   0   0   0   1   0]\n",
+      " [  0   4   4   5   1   1   0]\n",
+      " [  0   3  95  37   5   0   0]\n",
+      " [  0   2  27 158  27   2   0]\n",
+      " [  0   1   4  23  61   5   0]\n",
+      " [  0   0   2   4   7  10   0]\n",
+      " [  0   0   0   0   1   0   0]]\n"
      ]
     }
    ],
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "d9f242af",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
